--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Links Projeto Estrela",
-    "short_name": "Links Projeto Estrela",
-    "description": "Links Projeto Estrela",
+    "name": "Links Habitar",
+    "short_name": "Links Habitar",
+    "description": "Links Habitar",
     "theme_color": "#fff",
     "background_color": "white",
     "display": "standalone",
